scikits/odes/sundials/c_cvodes.pxd

from .c_sundials cimport *
from libc.stdio cimport FILE

cdef extern from "cvodes/cvodes.h":
    # lmm
    enum: CV_ADAMS # 1
    enum: CV_BDF   # 2

    # itask
    enum: CV_NORMAL     # 1
    enum: CV_ONE_STEP   # 2

    # ism
    enum: CV_SIMULTANEOUS   # 1
    enum: CV_STAGGERED      # 2
    enum: CV_STAGGERED1     # 3

    # DQtype
    enum: CV_CENTERED       # 1
    enum: CV_FORWARD        # 2

    # interp
    enum: CV_HERMITE        # 1
    enum: CV_POLYNOMIAL     # 2

    # CVODE return flags
    enum: CV_SUCCESS           #    0
    enum: CV_TSTOP_RETURN      #    1
    enum: CV_ROOT_RETURN       #    2

    enum: CV_WARNING           #   99

    enum: CV_TOO_MUCH_WORK     #   -1
    enum: CV_TOO_MUCH_ACC      #   -2
    enum: CV_ERR_FAILURE       #   -3
    enum: CV_CONV_FAILURE      #   -4

    enum: CV_LINIT_FAIL        #   -5
    enum: CV_LSETUP_FAIL       #   -6
    enum: CV_LSOLVE_FAIL       #   -7
    enum: CV_RHSFUNC_FAIL      #   -8
    enum: CV_FIRST_RHSFUNC_ERR #   -9
    enum: CV_REPTD_RHSFUNC_ERR #   -10
    enum: CV_UNREC_RHSFUNC_ERR #   -11
    enum: CV_RTFUNC_FAIL       #   -12
    enum: CV_NLS_INIT_FAIL     #   -13
    enum: CV_NLS_SETUP_FAIL    #   -14
    enum: CV_CONSTR_FAIL       #   -15
    enum: CV_NLS_FAIL          #   -16

    enum: CV_MEM_FAIL          #   -20
    enum: CV_MEM_NULL          #   -21
    enum: CV_ILL_INPUT         #   -22
    enum: CV_NO_MALLOC         #   -23
    enum: CV_BAD_K             #   -24
    enum: CV_BAD_T             #   -25
    enum: CV_BAD_DKY           #   -26
    enum: CV_TOO_CLOSE         #   -27
    enum: CV_VECTOROP_ERR      #   -28
    
    enum: CV_NO_QUAD             # -30
    enum: CV_QRHSFUNC_FAIL       # -31
    enum: CV_FIRST_QRHSFUNC_ERR  # -32
    enum: CV_REPTD_QRHSFUNC_ERR  # -33
    enum: CV_UNREC_QRHSFUNC_ERR  # -34

    enum: CV_NO_SENS             # -40
    enum: CV_SRHSFUNC_FAIL       # -41
    enum: CV_FIRST_SRHSFUNC_ERR  # -42
    enum: CV_REPTD_SRHSFUNC_ERR  # -43
    enum: CV_UNREC_SRHSFUNC_ERR  # -44

    enum: CV_BAD_IS              # -45

    enum: CV_NO_QUADSENS         # -50
    enum: CV_QSRHSFUNC_FAIL      # -51
    enum: CV_FIRST_QSRHSFUNC_ERR # -52
    enum: CV_REPTD_QSRHSFUNC_ERR # -53
    enum: CV_UNREC_QSRHSFUNC_ERR # -54
    
    enum: CV_UNRECOGNIZED_ERR    # -99
    
    # adjoint return values 

    enum: CV_NO_ADJ             # -101
    enum: CV_NO_FWD             # -102
    enum: CV_NO_BCK             # -103
    enum: CV_BAD_TB0            # -104
    enum: CV_REIFWD_FAIL        # -105
    enum: CV_FWD_FAIL           # -106
    enum: CV_GETY_BADT          # -107

    ctypedef int (*CVRhsFn)(sunrealtype t, N_Vector y, N_Vector ydot, void *user_data) except? -1
    ctypedef int (*CVRootFn)(sunrealtype t, N_Vector y, sunrealtype *gout, void *user_data) except? -1
    ctypedef int (*CVEwtFn)(N_Vector y, N_Vector ewt, void *user_data)
    ctypedef void (*CVErrHandlerFn)(int error_code,
                               char *module, char *function,
                               char *msg, void *user_data)

    ctypedef int (*CVQuadRhsFn)(sunrealtype t, N_Vector y,
                                N_Vector yQdot, void *user_data)
    ctypedef int (*CVSensRhsFn)(int Ns, sunrealtype t,  N_Vector y, N_Vector ydot,
                                N_Vector *yS, N_Vector *ySdot,
                                void *user_data,
                                N_Vector tmp1, N_Vector tmp2)
    ctypedef int (*CVSensRhs1Fn)(int Ns, sunrealtype t, N_Vector y, N_Vector ydot,
                                 int iS, N_Vector yS, N_Vector ySdot,
                                 void *user_data,
                                 N_Vector tmp1, N_Vector tmp2)
    ctypedef int (*CVQuadSensRhsFn)(int Ns, sunrealtype t, N_Vector y, 
                                    N_Vector *yS, N_Vector yQdot, 
                                    N_Vector *yQSdot, void *user_data,
                                    N_Vector tmp, N_Vector tmpQ)
    ctypedef int (*CVRhsFnB)(sunrealtype t, N_Vector y, N_Vector yB,
                             N_Vector yBdot, void *user_dataB)
    ctypedef int (*CVRhsFnBS)(sunrealtype t, N_Vector y, N_Vector *yS,
                              N_Vector yB, N_Vector yBdot, void *user_dataB)

    ctypedef int (*CVQuadRhsFnB)(sunrealtype t, N_Vector y, N_Vector yB,
                                 N_Vector qBdot, void *user_dataB)
    ctypedef int (*CVQuadRhsFnBS)(sunrealtype t, N_Vector y, N_Vector *yS,
                                 N_Vector yB, N_Vector qBdot, void *user_dataB)

    # Exported Functions -- Forward Problems
    void *CVodeCreate(int lmm, SUNContext sunctx)

    int CVodeInit(void *cvode_mem, CVRhsFn f, sunrealtype t0, N_Vector y0)
    int CVodeReInit(void *cvode_mem, sunrealtype t0, N_Vector y0)

    int CVodeSStolerances(void *cvode_mem, sunrealtype reltol, sunrealtype abstol)
    int CVodeSVtolerances(void *cvode_mem, sunrealtype reltol, N_Vector abstol)
    int CVodeWFtolerances(void *cvode_mem, CVEwtFn efun)

    int CVodeSetErrHandlerFn(void *cvode_mem, CVErrHandlerFn ehfun, void *eh_data)
    int CVodeSetErrFile(void *cvode_mem, FILE *errfp)
    int CVodeSetUserData(void *cvode_mem, void *user_data)
    int CVodeSetMaxOrd(void *cvode_mem, int maxord)
    int CVodeSetMaxNumSteps(void *cvode_mem, long int mxsteps)
    int CVodeSetMaxHnilWarns(void *cvode_mem, int mxhnil)
    int CVodeSetStabLimDet(void *cvode_mem, sunbooleantype stldet)
    int CVodeSetInitStep(void *cvode_mem, sunrealtype hin)
    int CVodeSetMinStep(void *cvode_mem, sunrealtype hmin)
    int CVodeSetMaxStep(void *cvode_mem, sunrealtype hmax)
    int CVodeSetStopTime(void *cvode_mem, sunrealtype tstop)
    int CVodeSetMaxErrTestFails(void *cvode_mem, int maxnef)
    int CVodeSetMaxNonlinIters(void *cvode_mem, int maxcor)
    int CVodeSetMaxConvFails(void *cvode_mem, int maxncf)
    int CVodeSetNonlinConvCoef(void *cvode_mem, sunrealtype nlscoef)
    int CVodeSetConstraints(void *cvode_mem, N_Vector constraints)

    int CVodeSetNonlinearSolver(void *cvode_mem, SUNNonlinearSolver NLS)

    int CVodeRootInit(void *cvode_mem, int nrtfn, CVRootFn g)
    int CVodeSetRootDirection(void *cvode_mem, int *rootdir)
    int CVodeSetNoInactiveRootWarn(void *cvode_mem)

    int CVode(void *cvode_mem, sunrealtype tout, N_Vector yout,
                          sunrealtype *tret, int itask)
    int CVodeGetDky(void *cvode_mem, sunrealtype t, int k, N_Vector dky)

    int CVodeGetWorkSpace(void *cvode_mem, long int *lenrw, long int *leniw)
    int CVodeGetNumSteps(void *cvode_mem, long int *nsteps)
    int CVodeGetNumRhsEvals(void *cvode_mem, long int *nfevals)
    int CVodeGetNumLinSolvSetups(void *cvode_mem, long int *nlinsetups)
    int CVodeGetNumErrTestFails(void *cvode_mem, long int *netfails)
    int CVodeGetLastOrder(void *cvode_mem, int *qlast)
    int CVodeGetCurrentOrder(void *cvode_mem, int *qcur)
    int CVodeGetCurrentGamma(void *cvode_mem, sunrealtype *gamma)
    int CVodeGetNumStabLimOrderReds(void *cvode_mem, long int *nslred)
    int CVodeGetActualInitStep(void *cvode_mem, sunrealtype *hinused)
    int CVodeGetLastStep(void *cvode_mem, sunrealtype *hlast)
    int CVodeGetCurrentStep(void *cvode_mem, sunrealtype *hcur)
    int CVodeGetCurrentState(void *cvode_mem, N_Vector *y)
    int CVodeGetCurrentTime(void *cvode_mem, sunrealtype *tcur)
    int CVodeGetTolScaleFactor(void *cvode_mem, sunrealtype *tolsfac)
    int CVodeGetErrWeights(void *cvode_mem, N_Vector eweight)
    int CVodeGetEstLocalErrors(void *cvode_mem, N_Vector ele)
    int CVodeGetNumGEvals(void *cvode_mem, long int *ngevals)
    int CVodeGetRootInfo(void *cvode_mem, int *rootsfound)

    int CVodeGetIntegratorStats(void *cvode_mem, long int *nsteps,
                                            long int *nfevals, long int *nlinsetups,
                                            long int *netfails, int *qlast,
                                            int *qcur, sunrealtype *hinused, sunrealtype *hlast,
                                            sunrealtype *hcur, sunrealtype *tcur)

    int CVodeGetNumNonlinSolvIters(void *cvode_mem, long int *nniters)
    int CVodeGetNumNonlinSolvConvFails(void *cvode_mem, long int *nncfails)
    int CVodeGetNonlinSolvStats(void *cvode_mem, long int *nniters,
                                            long int *nncfails)
    char *CVodeGetReturnFlagName(long int flag)
    void CVodeFree(void **cvode_mem)

    # Exported Functions -- Quadrature

    int CVodeQuadInit(void *cvode_mem, CVQuadRhsFn fQ, N_Vector yQ0)
    int CVodeQuadReInit(void *cvode_mem, N_Vector yQ0)
    int CVodeQuadSStolerances(void *cvode_mem, sunrealtype reltolQ,
                              sunrealtype abstolQ)
    int CVodeQuadSVtolerances(void *cvode_mem, sunrealtype reltolQ,
                              N_Vector abstolQ)

    int CVodeSetQuadErrCon(void *cvode_mem, sunbooleantype errconQ)

    int CVodeGetQuad(void *cvode_mem, sunrealtype *tret, N_Vector yQout)
    int CVodeGetQuadDky(void *cvode_mem, sunrealtype t, int k, N_Vector dky)

    int CVodeGetQuadNumRhsEvals(void *cvode_mem, long int *nfQevals)
    int CVodeGetQuadNumErrTestFails(void *cvode_mem, long int *nQetfails)
    int CVodeGetQuadErrWeights(void *cvode_mem, N_Vector eQweight)
    int CVodeGetQuadStats(void *cvode_mem, long int *nfQevals, 
                          long int *nQetfails)

    void CVodeQuadFree(void *cvode_mem)

    # Exported Functions -- Sensitivities
    int CVodeSensInit(void *cvode_mem, int Ns, int ism,
                      CVSensRhsFn fS, N_Vector *yS0)
    int CVodeSensInit1(void *cvode_mem, int Ns, int ism,
                       CVSensRhs1Fn fS1, N_Vector *yS0)
    int CVodeSensReInit(void *cvode_mem, int ism, N_Vector *yS0)

    int CVodeSensSStolerances(void *cvode_mem, sunrealtype reltolS,
                              sunrealtype *abstolS)
    int CVodeSensSVtolerances(void *cvode_mem, sunrealtype reltolS,
                              N_Vector *abstolS)
    int CVodeSensEEtolerances(void *cvode_mem)

    int CVodeSetSensDQMethod(void *cvode_mem, int DQtype, sunrealtype DQrhomax)
    int CVodeSetSensErrCon(void *cvode_mem, sunbooleantype errconS)
    int CVodeSetSensMaxNonlinIters(void *cvode_mem, int maxcorS)
    int CVodeSetSensParams(void *cvode_mem, sunrealtype *p,
                           sunrealtype *pbar, int *plist)

    int CVodeSetNonlinearSolverSensSim(void *cvode_mem,
                                       SUNNonlinearSolver NLS)
    int CVodeSetNonlinearSolverSensStg(void *cvode_mem,
                                       SUNNonlinearSolver NLS)
    int CVodeSetNonlinearSolverSensStg1(void *cvode_mem,
                                        SUNNonlinearSolver NLS)

    int CVodeSensToggleOff(void *cvode_mem)

    int CVodeGetSens(void *cvode_mem, sunrealtype *tret, N_Vector *ySout)
    int CVodeGetSens1(void *cvode_mem, sunrealtype *tret, int iss,
                      N_Vector ySout) # rename is to iss, is protected in python
    int CVodeGetSensDky(void *cvode_mem, sunrealtype t, int k,
                        N_Vector *dkyA)
    int CVodeGetSensDky1(void *cvode_mem, sunrealtype t, int k, int iss,
                         N_Vector dky) # rename is to iss, is protected in python
